# image_similarity_search

./: .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  environment.yml  pyproject.toml
.dvc/: config
.github/workflows/: qa.yml
data/interim/: .gitignore  mapping.csv.dvc
data/raw/: .gitignore  catalogue.dvc
docs/: mkdocs.yml
docs/src/: canvas.md  dataset_card.md  index.md  model_card.md
image_similarity_search/: autoencoder.py  dump.py  evaluation.py  pre_processing.py  split.py
image_similarity_search/api/: main.py  manager.py
image_similarity_search/core/: data.py  datatypes.py  eval.py  train.py
image_similarity_search/core/callbacks/: __init__.py  base.py  mlflow.py
image_similarity_search/models/: __init__.py
image_similarity_search/models/clip/: data.py  params.yml  train.py
image_similarity_search/models/cnn/: __init__.py  data.py  model.py  params.yml  train.py
image_similarity_search/nn/: conv.py
image_similarity_search/utils/: __init__.py  checks.py  torch.py
models/: .gitignore
models/clip/pretrained/: .gitignore  ViT-B-32.pt.dvc
notebooks/: clip-augmented.ipynb  clip_finetuning.ipynb
scripts/: train.py
tests/core/: test_eval.py
